# zkpassport-packages

./: .eslintrc.cjs  .eslintrc.json  .gitignore  .gitmodules  README.md  SECURITY.md  bun.lockb  package-lock.json  package.json  tsconfig.json  tsconfig.packages.json  turbo.json  vercel.json
.github/: CODEOWNERS
.github/workflows/: check-large-files.yml  check-pr.yml  ci.yml  publish-registry-sdk.yml  publish-zkpassport-sdk.yml  publish-zkpassport-ui.yml  publish-zkpassport-utils.yml  registry-contracts.yml  registry-sdk.yml  sdk-test.yaml  synced-deps-check.yml  utils-test.yml  zkpassport-sdk.yaml  zkpassport-utils.yml
examples/static/: index.html  package.json  sync-bundle.mjs
rust/: Cargo.toml  README.md
rust/crates/zkpassport-bridge/: Cargo.toml
rust/crates/zkpassport-bridge/examples/: emit_frame.rs
rust/crates/zkpassport-bridge/src/: ffi.rs  lib.rs
rust/crates/zkpassport-core/: Cargo.toml
rust/crates/zkpassport-core/src/: barrett.rs  bytes.rs  commitments.rs  curves.rs  curves_gen.rs  der.rs  disclosure.rs  dsc.rs  id_data.rs  input_gen.rs  integrity.rs  lib.rs  merkle.rs  oids_gen.rs  outer.rs  plan.rs  poseidon2.rs  query.rs  registry.rs  select.rs  signature.rs  sod.rs
rust/crates/zkpassport-core/tests/: differential.rs
rust/crates/zkpassport-ffi/: Cargo.toml
rust/crates/zkpassport-ffi/src/: driver.rs  lib.rs
rust/crates/zkpassport-ffi/tests/: ffi_e2e.rs
rust/crates/zkpassport-wasm/: Cargo.toml
rust/crates/zkpassport-wasm/src/: lib.rs
rust/scripts/: build-ios.sh  gen-curves.ts  gen-oids.ts  gen-vectors.ts
rust/vectors/: vectors.json
scripts/: check-prerelease-tag.sh  check-ui-bumped-with-sdk.sh  copy-dts.sh  find-large-commits.sh  find-large-file-commits.sh  prepublish.sh  sync-workspace-deps.sh  validate-package.sh  vercel-build.sh
src/: index.ts
