[package]
name = "zkpassport-bridge"
description = "ZKPassport bridge protocol (@obsidion/bridge-compatible): secp256k1 ECDH session, AES-GCM envelopes, JSON-RPC framing. Standalone — no zkpassport-core dependency."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
k256 = { version = "0.13", features = ["ecdh", "alloc"], default-features = false }
aes-gcm = "0.10"
sha2 = "0.10"
serde_json = "1"
base64 = "0.22"
miniz_oxide = "0.8"
hex = "0.4"
