[package]
name = "zkpassport-core"
description = "Native core for ZKPassport: circuit input generation and supporting crypto (Rust port of @zkpassport/utils)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
taceo-poseidon2 = "0.2"
ark-bn254 = "0.5"
ark-ff = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
