[package]
name = "zkpassport-ffi"
description = "C ABI for zkpassport-core (App Clip / iOS / Android input generation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
zkpassport-core = { path = "../zkpassport-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
num-bigint = "0.4"
hex = "0.4"

[dependencies.zkpassport-bridge]
path = "../zkpassport-bridge"
