[package]
name = "zkpassport-wasm"
description = "WASM bindings for zkpassport-core (browser input generation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zkpassport-ffi = { path = "../zkpassport-ffi" }
zkpassport-core = { path = "../zkpassport-core" }
wasm-bindgen = "0.2"
# ark-std → rand pulls getrandom transitively; the js feature makes it use
# crypto.getRandomValues on wasm32-unknown-unknown (we never use randomness —
# salts come from the caller — but the dependency must compile).
getrandom = { version = "0.2", features = ["js"] }
